--- a/recipes/breakfast_casserole.html
+++ b/recipes/breakfast_casserole.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipe</title>
+    <title>Breakfast Casserole</title>
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <a href="./recipes/breakfast_casserole.html">Breakfast Casserole</a>
+    <h1>Breakfast Casserole</h1>
   </body>
 </html>
