--- a/recipes/breakfast_casserole.html
+++ b/recipes/breakfast_casserole.html
@@ -7,5 +7,9 @@
   </head>
   <body>
     <h1>Breakfast Casserole</h1>
+    <p>
+      <img src="../assets/breakfast-casserole.png" alt="Breakfast Casserole in an oven tray" width="400" height="400">
+    <p>
+    <a href="../index.html">Home</a>
   </body>
 </html>
