--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/breakfast_casserole.html">Breakfast Casserole</a>
+    <ul>
+    <li><a href="./recipes/breakfast_casserole.html">Breakfast Casserole</a></li>
+    <li><a href="./recipes/beef_bulgogi.html">Beef Bulgogi</a></li>
+    </ul>
   </body>
 </html>
