Move home button and add a separate back button

--- a/recipes/beef_bulgogi.html
+++ b/recipes/beef_bulgogi.html
@@ -6,7 +6,8 @@
     <title>Beef Bulgogi</title>
   </head>
   <body>
-    <h1>Beef Bulgogi</h1>
     <a href="../index.html">Home</a>
+    <h1>Beef Bulgogi</h1>
+    <a href="../index.html">Back</a>
   </body>
 </html>
