--- a/recipes/breakfast_casserole.html
+++ b/recipes/breakfast_casserole.html
@@ -6,6 +6,7 @@
     <title>Breakfast Casserole</title>
   </head>
   <body>
+    <a href="../index.html">Home</a>
     <h1>Breakfast Casserole</h1>
     <p>
       <img src="../assets/breakfast-casserole.png" alt="Breakfast Casserole in an oven tray" width="400" height="400">
@@ -33,6 +34,6 @@
       <li>The next morning, preheat oven to 325 degrees F (165 degrees C).</li>
       <li>Bake in preheated oven for 50 to 55 minutes or until set and lightly browned on top. Garnish with parsley sprigs and serve hot.</li>
     </ol>
-    <a href="../index.html">Home</a>
+    <a href="../index.html">Back</a>
   </body>
 </html>
