Add image of beef bulgogi

--- a/recipes/beef_bulgogi.html
+++ b/recipes/beef_bulgogi.html
@@ -8,6 +8,9 @@
   <body>
     <a href="../index.html">Home</a>
     <h1>Beef Bulgogi</h1>
+    <p>
+      <img src="../assets/beef-bulgogi.png" alt="Beef Bulgogi served on a platter" width="400">
+    </p>
     <a href="../index.html">Back</a>
   </body>
 </html>
