--- a/recipes/beef_bulgogi.html
+++ b/recipes/beef_bulgogi.html
@@ -11,6 +11,28 @@
     <p>
       <img src="../assets/beef-bulgogi.png" alt="Beef Bulgogi served on a platter" width="400">
     </p>
+    <h2>Description</h2>
+    <p>Bulgogi, or Korean barbecue, literally means "fire meat." Thin slices of beef (or sometimes pork) are marinated in a sweet-savory sauce, then grilled to juicy and flavorful perfection.</p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>5 tablespoons soy sauce</li>
+      <li>¼ cup chopped green onion</li>
+      <li>2 ½ tablespoons white sugar</li>
+      <li>2 tablespoons minced garlic</li>
+      <li>2 tablespoons sesame seeds</li>
+      <li>2 tablespoons sesame oil</li>
+      <li>½ teaspoon ground black pepper</li>
+      <li>1 pound flank steak, thinly sliced</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+      <li>Gather all ingredients.</li>
+      <li>Whisk soy sauce, green onion, sugar, garlic, sesame seeds, sesame oil, and pepper together in a bowl.</li>
+      <li>Place flank steak slices in a shallow dish. Pour marinade over top. Cover and refrigerate for at least 1 hour or overnight.</li>
+      <li>Preheat an outdoor grill for high heat, and lightly oil the grate.</li>
+      <li>Quickly grill flank steak slices on the preheated grill until slightly charred and cooked through, 1 to 2 minutes per side.</li>
+      <li>Serve hot and enjoy! </li>
+    </ol>
     <a href="../index.html">Back</a>
   </body>
 </html>
