--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-    <li><a href="./recipes/breakfast_casserole.html">Breakfast Casserole</a></li>
-    <li><a href="./recipes/beef_bulgogi.html">Beef Bulgogi</a></li>
-    </ul>
+    <div class="card">
+      <h1>Odin Recipes</h1>
+      <ul>
+        <li><a href="./recipes/breakfast_casserole.html">Breakfast Casserole</a></li>
+        <li><a href="./recipes/beef_bulgogi.html">Beef Bulgogi</a></li>
+      </ul>
+    </div>
   </body>
 </html>
