--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <ul>
         <li><a href="./recipes/breakfast_casserole.html">Breakfast Casserole</a></li>
         <li><a href="./recipes/beef_bulgogi.html">Beef Bulgogi</a></li>
+        <li class="placeholder-recipe"><i>More recipes coming soon...</i></li>
       </ul>
     </div>
   </body>
