Center content on recipe pages

--- a/recipes/breakfast_casserole.html
+++ b/recipes/breakfast_casserole.html
@@ -7,34 +7,36 @@
     <link rel="stylesheet" href="../styles.css">
   </head>
   <body>
-    <a href="../index.html">Home</a>
-    <h1>Breakfast Casserole</h1>
-    <p>
-      <img src="../assets/breakfast-casserole.png" alt="Breakfast Casserole in an oven tray" width="400" height="400">
-    <p>
-    <h2>Description</h2>
-    <p>Mmm mmm good! This is a must do for every holiday in my household, or just when you have guests overnight! Can be made with egg substitute, skim milk and turkey sausage to make it healthier!</p>
-    <h2>Ingredients</h2>
-    <ul>
-      <li>2 ½ cups seasoned croutons</li>
-      <li>1 pound spicy pork sausage</li>
-      <li>4 eggs</li>
-      <li>2 ¼ cups milk</li>
-      <li>1 (10.75 ounce) can condensed cream of mushroom soup</li>
-      <li>1 (10 ounce) package frozen chopped spinach - thawed, drained and squeezed dry</li>
-      <li>1 (4.5 ounce) can mushrooms, drained and chopped</li>
-      <li>1 cup shredded sharp Cheddar cheese</li>
-      <li>1 cup shredded Monterey Jack cheese</li>
-      <li>¼ teaspoon dry mustard</li>
-      <li>2 sprigs fresh parsley, for garnish</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-      <li>Spread croutons on bottom of greased 9x13 inch baking dish. Crumble sausage into medium skillet. Cook over medium heat until browned, stirring occasionally. Drain off any drippings. Spread sausage over croutons.</li>
-      <li>In a large bowl, whisk together eggs and milk until well blended. Stir in soup, spinach, mushrooms, cheeses and mustard. Pour egg mixture over sausage and croutons. Refrigerate overnight.</li>
-      <li>The next morning, preheat oven to 325 degrees F (165 degrees C).</li>
-      <li>Bake in preheated oven for 50 to 55 minutes or until set and lightly browned on top. Garnish with parsley sprigs and serve hot.</li>
-    </ol>
-    <a href="../index.html">Back</a>
+    <div class="recipe">
+      <a href="../index.html">Home</a>
+      <h1>Breakfast Casserole</h1>
+      <p>
+        <img src="../assets/breakfast-casserole.png" alt="Breakfast Casserole in an oven tray" width="400" height="400">
+      <p>
+      <h2>Description</h2>
+      <p>Mmm mmm good! This is a must do for every holiday in my household, or just when you have guests overnight! Can be made with egg substitute, skim milk and turkey sausage to make it healthier!</p>
+      <h2>Ingredients</h2>
+      <ul>
+        <li>2 ½ cups seasoned croutons</li>
+        <li>1 pound spicy pork sausage</li>
+        <li>4 eggs</li>
+        <li>2 ¼ cups milk</li>
+        <li>1 (10.75 ounce) can condensed cream of mushroom soup</li>
+        <li>1 (10 ounce) package frozen chopped spinach - thawed, drained and squeezed dry</li>
+        <li>1 (4.5 ounce) can mushrooms, drained and chopped</li>
+        <li>1 cup shredded sharp Cheddar cheese</li>
+        <li>1 cup shredded Monterey Jack cheese</li>
+        <li>¼ teaspoon dry mustard</li>
+        <li>2 sprigs fresh parsley, for garnish</li>
+      </ul>
+      <h2>Steps</h2>
+      <ol>
+        <li>Spread croutons on bottom of greased 9x13 inch baking dish. Crumble sausage into medium skillet. Cook over medium heat until browned, stirring occasionally. Drain off any drippings. Spread sausage over croutons.</li>
+        <li>In a large bowl, whisk together eggs and milk until well blended. Stir in soup, spinach, mushrooms, cheeses and mustard. Pour egg mixture over sausage and croutons. Refrigerate overnight.</li>
+        <li>The next morning, preheat oven to 325 degrees F (165 degrees C).</li>
+        <li>Bake in preheated oven for 50 to 55 minutes or until set and lightly browned on top. Garnish with parsley sprigs and serve hot.</li>
+      </ol>
+      <a href="../index.html">Back</a>
+    </div>
   </body>
 </html>
